issue #CDS-528 #comment removed overflow:auto from inset css

--- a/sass/panel-layouts/clean-25-75-inset.scss
+++ b/sass/panel-layouts/clean-25-75-inset.scss
@@ -45,7 +45,6 @@
     width: 50%;
     float: right;
     padding-left: $zen-gutter-width/2;
-    overflow: auto;
   }
 
 }
